--- a/project/timeline/index.html
+++ b/project/timeline/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <title>Timeline</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' id='style-css'  href='../theme/style.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='fonts-css'  href='../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='style-css'  href='../../theme/style.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='fonts-css'  href='../../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
     <link rel="stylesheet" href="./style.css">
-    <link rel='stylesheet' id='custom-css'  href='../theme/assets/css/custom.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='custom-css'  href='../../theme/assets/css/custom.css' type='text/css' media='all' />
     <style id='custom-inline-css' type='text/css'>body { font-family: 'Roboto', sans-serif; }h1, h2, h3, h4, h5, h6, .title, .text_logo, .comment-reply-title, .header_square_logo a.square_letter_logo {font-family: 'Poppins', sans-serif;}a { color: #ff374a; }
     </style>
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
@@ -24,8 +24,8 @@
       <div class="container">
         <div class="site_branding">
           <h1 class="text_logo">
-            <a href="index.html" rel="home">STUDIO MILLMINT
-              <img src='../images/flower.png' height='25' width='25' /></a>
+            <a href="../../index.html" rel="home">STUDIO MILLMINT
+              <img src='../../images/flower.png' height='25' width='25' /></a>
           </h1>
         </div>
 
@@ -45,15 +45,15 @@
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
               class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
-              <a href="../index.html">Home/家</a></li>
+              <a href="../../index.html">Home/家</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                href="../intro/index.html">Intro/序</a></li>
+                href="../../intro/index.html">Intro/序</a></li>
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                href="../wiki/index.html">Wiki/ウィキ</a></li>
+                href="../../wiki/index.html">Wiki/ウィキ</a></li>
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a
-                href="../timeline/index.html">Timeline/年表</a></li>
+                href="../../timeline/index.html">Timeline/年表</a></li>
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../comic/index.html">Comic/漫画</a></li>
+                href="../../comic/index.html">Comic/漫画</a></li>
           </ul>
           <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 326.21875px;"></span>
         </div>
@@ -72,7 +72,7 @@
 
       <div class="container">
         <div class="site_branding">
-          <h1 class="text_logo"><a href="index.html" rel="home">STUDIO MILLMINT <img src='images/flower.png'
+          <h1 class="text_logo"><a href="../../index.html" rel="home">STUDIO MILLMINT <img src='images/flower.png'
                 height='25' width='25' />
             </a></h1>
         </div>
@@ -95,19 +95,19 @@
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
               class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
-              <a href="../index.html">Home/家</a></li>
+              <a href="../../index.html">Home/家</a></li>
             <li id="menu-item-702"
               class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                href="../intro/index.html">Intro/序</a></li>
+                href="../../intro/index.html">Intro/序</a></li>
             <li id="menu-item-523"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                href="../wiki/index.html">Wiki/ウィキ</a></li>
+                href="../../wiki/index.html">Wiki/ウィキ</a></li>
             <li id="menu-item-524"
               class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a
-                href="../timeline/index.html">Timeline/年表</a></li>
+                href="../../timeline/index.html">Timeline/年表</a></li>
             <li id="menu-item-525"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../comic/index.html">Comic/漫画</a></li>
+                href="../../comic/index.html">Comic/漫画</a></li>
           </ul>
           <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 326.21875px;"></span>
         </div>
@@ -760,19 +760,19 @@
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
               class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
-              <a href="../index.html">Home/家</a></li>
+              <a href="../../index.html">Home/家</a></li>
             <li id="menu-item-702"
               class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                href="../intro/index.html">Intro/序</a></li>
+                href="../../intro/index.html">Intro/序</a></li>
             <li id="menu-item-523"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                href="../wiki/index.html">Wiki/ウィキ</a></li>
+                href="../../wiki/index.html">Wiki/ウィキ</a></li>
             <li id="menu-item-524"
               class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a
-                href="../timeline/index.html">Timeline/年表</a></li>
+                href="../../timeline/index.html">Timeline/年表</a></li>
             <li id="menu-item-525"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../comic/index.html">Comic/漫画</a></li>
+                href="../../comic/index.html">Comic/漫画</a></li>
           </ul>
           <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 326.21875px;"></span>
         </div>
@@ -783,10 +783,9 @@
       <!-- end sliding sidebar content -->
 </div>
 
-      <script type='text/javascript' src='../theme/assets/js/global.js'></script>
+      <script type='text/javascript' src='../../theme/assets/js/global.js'></script>
 
-      <script type='text/javascript' src='../theme/plugins/inc/core.js'></script>
-      <script type='text/javascript'></script>
+      <script type='text/javascript' src='../../theme/plugins/inc/core.js'></script>
 
 </body>
 </html>
