--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
                 <a href="index.html">Home/家</a></li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                  href="intro/index.html">Intro/序</a></li>
+                  href="project/index.html">Project/プロジェクト</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                  href="wiki/index.html">Wiki/ウィキ</a></li>
-              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                  href="timeline/index.html">Timeline/年表</a></li>
-              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
                   href="comic/index.html">Comic/漫画</a></li>
+              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+                  href="blog/index.html">Blog/ブログ</a></li>
+              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
+                  href="about/index.html">About/約</a></li>
             </ul>
             <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
           </div>
@@ -129,27 +129,23 @@
               <li id="menu-item-585"
                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
                 <a href="index.html">Home/家</a></li>
-              <li id="menu-item-702"
-                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                  href="intro/index.html">Intro/序</a></li>
-              <li id="menu-item-523"
-                class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                  href="wiki/index.html">Wiki/ウィキ</a></li>
-              <li id="menu-item-524"
-                class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                  href="timeline/index.html">Timeline/年表</a></li>
-              <li id="menu-item-525"
-                class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
+              <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
+                  href="project/index.html">Project/プロジェクト</a></li>
+              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
                   href="comic/index.html">Comic/漫画</a></li>
+              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+                  href="blog/index.html">Blog/ブログ</a></li>
+              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
+                  href="about/index.html">About/約</a></li>
             </ul>
             <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
           </div>
-
           <!-- Place header control after main menu if site title is enabled -->
 
         </div><!-- end .container -->
       </div><!-- end .header_nav -->
     </div><!-- end .header_nav_wrapper -->
+<hr>
     <div class="site_main_container">
 
       <main id="content" class="site-content">
@@ -161,9 +157,9 @@
             <ul class="row">
               <li class="page stretch join up down">
                 <div class="thin">
-                  <h3>Home</h3>
+                  <h3>Project</h3>
                   <ul class="content">
-                    <li>Hero carousel
+                    <li><a href="wiki/index.html">Zelda Wiki</a>
                       <ul class="section">
                         <li>Dispatch</li>
                         <li>Shopping</li>
@@ -171,8 +167,8 @@
                         <li>Helper tasks</li>
                       </ul>
                     </li>
-                    <li>Partner logos</li>
-                    <li>How to use</li>
+                    <li><a href="timeline/index.html">Timeline</a></li>
+                    <li><a href="gallery/index.html">Gallery</a></li>
                     <li>Why to use</li>
                     <li>Showcase</li>
                     <li>Become a GoGetter</li>
@@ -181,7 +177,7 @@
               </li>
               <li class="page stretch join up down">
                 <div class="thin">
-                  <h3>Gateway</h3>
+                  <h3>Comic</h3>
                   <ul class="content">
                     <li>Option to download native apps</li>
                     <li>Log in</li>
@@ -191,12 +187,12 @@
               </li>
               <li class="page stretch join up down">
                 <div class="thin">
-                  <h3>FAQ</h3>
+                  <h3>Blog</h3>
                 </div>
               </li>
               <li class="page stretch join up down">
                 <div class="thin">
-                  <h3>Blog</h3>
+                  <h3>About</h3>
                 </div>
               </li>
             </ul>
@@ -320,11 +316,6 @@
           </div> <!-- close .footer_sidebars_inner_wrapper -->
         </div> <!-- close .footer_sidebars_container -->
 
-
-        <div id="aliagototop" title="Scroll To Top" class="alia_gototop_button footer_button">
-          <i class="fas fa-arrow-up"></i>
-        </div>
-
       </footer><!-- #colophon -->
 
     </div><!-- .site_main_container -->
@@ -343,13 +334,13 @@
                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
                 <a href="index.html">Home/家</a></li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                  href="intro/index.html">Intro/序</a></li>
+                  href="project/index.html">Project/プロジェクト</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                  href="wiki/index.html">Wiki/ウィキ</a></li>
-              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                  href="timeline/index.html">Timeline/年表/人物</a></li>
-              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
                   href="comic/index.html">Comic/漫画</a></li>
+              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+                  href="blog/index.html">Blog/ブログ</a></li>
+              <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
+                  href="about/index.html">About/約</a></li>
             </ul>
           </div>
         </div> <!-- end .top_header_items_holder -->
