Updated sitemap, added blog

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <ul class="row">
               <li class="page stretch join up down">
                 <div class="thin">
-                  <h3>Project</h3>
+                  <h3><a href="project/index.html">Project</a></h3>
                   <ul class="content">
                     <li><a href="wiki/index.html">Zelda Wiki</a>
                       <ul class="section">
@@ -167,7 +167,7 @@
                         <li>Helper tasks</li>
                       </ul>
                     </li>
-                    <li><a href="timeline/index.html">Timeline</a></li>
+                    <li><a href="project/timeline/index.html">Timeline</a></li>
                     <li><a href="gallery/index.html">Gallery</a></li>
                     <li>Why to use</li>
                     <li>Showcase</li>
@@ -177,7 +177,7 @@
               </li>
               <li class="page stretch join up down">
                 <div class="thin">
-                  <h3>Comic</h3>
+                  <h3><a href="comic/index.html">Comic</a></h3>
                   <ul class="content">
                     <li>Option to download native apps</li>
                     <li>Log in</li>
@@ -188,6 +188,11 @@
               <li class="page stretch join up down">
                 <div class="thin">
                   <h3>Blog</h3>
+                  <ul class="content">
+                    <li>Blog</li>
+                    <li>millmintOS</li>
+                    <li>Register</li>
+                  </ul>
                 </div>
               </li>
               <li class="page stretch join up down">
@@ -251,40 +256,13 @@
               </li>
             </ul>
           </section>
-
-          <!--
-          <figure class="post_banner">
-            <div class ="home">
-              <img src="images/princess.jpg" width="50%" height="50%">
-          </div> -->
-
-          <!-- partial -->
-
-          <!-- WIP
-            <div class="home-content">
-              <h1> <i>Welcome to Studio MillMint</i> </h1>
-              <h3> スタジオミルミントへようこ </h3>
-              <p> Where do you want to begin? </p>
-              <div class=row>
-                <div class="half-column">
-                    <h4> ZELDA WIKI </h4>
-                    <h4> COMIC </h4>
-                    <h4> TIMELINE </h4>
-                </div>
-                <div class="half-column">
-                    <h4> ARCHIVES </h4>
-                    <h4> MILLMINT BLOG </h4>
-                    <h4> ABOUT MILLMINT </h4>
-                </div>
-              </div>
-            -->
-            </div>
-          </figure>
-        </section><!-- #primary -->
+        </div>
+      </figure>
+    </section><!-- #primary -->
 
 
 
-      </main><!-- #content -->
+    </main><!-- #content -->
 
       <footer id="colophon" class="site_footer container" role="contentinfo">
 
