--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   <ul class="content">
                     <li>Blog</li>
                     <li>millmintOS</li>
-                    <li>Register</li>
+                    <li>The <i>Atlantic</i> Bulletin</li>
                   </ul>
                 </div>
               </li>
