--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
                   href="comic/index.html">Comic/漫画</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                  href="blog/index.html">Blog/ブログ</a></li>
+                  href="newsroom/index.html">News/ニュース</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
                   href="about/index.html">About/約</a></li>
             </ul>
@@ -134,7 +134,7 @@
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
                   href="comic/index.html">Comic/漫画</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                  href="blog/index.html">Blog/ブログ</a></li>
+                  href="newsroom/index.html">News/ニュース</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
                   href="about/index.html">About/約</a></li>
             </ul>
@@ -187,10 +187,10 @@
               </li>
               <li class="page stretch join up down">
                 <div class="thin">
-                  <h3>Blog</h3>
+                  <h3><a href="newsroom/index.html">Newsroom</a></h3>
                   <ul class="content">
-                    <li>Blog</li>
-                    <li>millmintOS</li>
+                    <li><a href="newsroom/blog/index.html">Studio Blog</a></li>
+                    <li><a href="newsroom/millmintOS/index.html">millmintOS</a></li>
                     <li>The <i>Atlantic</i> Bulletin</li>
                   </ul>
                 </div>
@@ -316,7 +316,7 @@
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
                   href="comic/index.html">Comic/漫画</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                  href="blog/index.html">Blog/ブログ</a></li>
+                  href="newsroom/index.html">News/ニュース</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
                   href="about/index.html">About/約</a></li>
             </ul>
