--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
             <ul id="top-menu" class="navbar">
               <li id="menu-item-585"
                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
-                <a href="index.html">Home/家</a></li>
+                <a href="index.html">Home|家</a></li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                  href="project/index.html">Project/プロジェクト</a></li>
+                  href="project/index.html">Project|プロジェクト</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                  href="comic/index.html">Comic/漫画</a></li>
+                  href="files/index.html">Files|ファイル</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                  href="newsroom/index.html">News/ニュース</a></li>
+                  href="newsroom/index.html">News|便り</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                  href="about/index.html">About/約</a></li>
+                  href="about/index.html">About|約</a></li>
             </ul>
             <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
           </div>
@@ -128,15 +128,15 @@
             <ul id="top-menu" class="navbar">
               <li id="menu-item-585"
                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
-                <a href="index.html">Home/家</a></li>
+                <a href="index.html">Home|家</a></li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                  href="project/index.html">Project/プロジェクト</a></li>
+                  href="project/index.html">Project|プロジェクト</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                  href="comic/index.html">Comic/漫画</a></li>
+                  href="files/index.html">Files|ファイル</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                  href="newsroom/index.html">News/ニュース</a></li>
+                  href="newsroom/index.html">News|便り</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                  href="about/index.html">About/約</a></li>
+                  href="about/index.html">About|約</a></li>
             </ul>
             <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
           </div>
@@ -153,7 +153,7 @@
           <section class="window">
 
             <h2 class="main thick">
-              <a href="index.html">STUDIO MILLMINT/スタジオミルミント</a></li></h3>
+              <a href="index.html">STUDIO MILLMINT | スタジオミルミント</a></li></h3>
             <ul class="row">
               <li class="page stretch join up down">
                 <div class="thin">
@@ -161,10 +161,10 @@
                   <ul class="content">
                     <li><a href="wiki/index.html">Zelda Wiki</a>
                       <ul class="section">
-                        <li>Dispatch</li>
-                        <li>Shopping</li>
-                        <li>Food Delivery</li>
-                        <li>Helper tasks</li>
+                        <li>Intro</li>
+                        <li>Characters</li>
+                        <li>Landscape</li>
+                        <li>Author</li>
                       </ul>
                     </li>
                     <li><a href="project/timeline/index.html">Timeline</a></li>
@@ -177,11 +177,11 @@
               </li>
               <li class="page stretch join up down">
                 <div class="thin">
-                  <h3><a href="comic/index.html">Comic</a></h3>
+                  <h3><a href="files/index.html">Documents</a></h3>
                   <ul class="content">
-                    <li>Option to download native apps</li>
-                    <li>Log in</li>
-                    <li>Register</li>
+                    <li>Comics</li>
+                    <li>Animation</li>
+                    <li>Essays</li>
                   </ul>
                 </div>
               </li>
@@ -198,10 +198,14 @@
               <li class="page stretch join up down">
                 <div class="thin">
                   <h3>About</h3>
+                  <ul class="content">
+                    <li><a href="about/studio/index.html">About the Studio</a></li>
+                    <li><a href="about/author/index.html">About the Author</a></li>
+                  </ul>
                 </div>
               </li>
             </ul>
-            <h3 class="main thick">Footer Navigation
+            <h3 class="main thick">Across the web
               <ul class="thin">
                 <li>Contact Info</li>
                 <li>Copyright info</li>
@@ -229,12 +233,12 @@
               </li>
               <li class="page join down">
                 <div class="thin">
-                  <h3>Sign Up Form</h3>
+                  <h3><a href="www.patreon.com/vekllei">Patreon</a></h3>
                 </div>
               </li>
               <li class="page join down">
                 <div class="thin">
-                  <h3>About GoGet</h3>
+                  <h3>Similar projects</h3>
                   <ul class="content">
                     <li>About GoGet</li>
                     <li>Our Community</li>
@@ -246,12 +250,12 @@
               </li>
               <li class="page join down">
                 <div class="thin">
-                  <h3>Staff Vacancies</h3>
+                  <h3><a href="discord.gg/dCE6vSU">Discord</h3>
                 </div>
               </li>
               <li class="page join down">
                 <div class="thin">
-                  <h3>Terms of Service</h3>
+                  <h3>About this site</h3>
                 </div>
               </li>
             </ul>
@@ -310,15 +314,15 @@
             <ul id="mobile-menu" class="navbar">
               <li id="menu-item-585"
                 class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
-                <a href="index.html">Home/家</a></li>
+                <a href="index.html">Home|家</a></li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                  href="project/index.html">Project/プロジェクト</a></li>
+                  href="project/index.html">Project|プロジェクト</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                  href="comic/index.html">Comic/漫画</a></li>
+                  href="files/index.html">Files|ファイル</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                  href="newsroom/index.html">News/ニュース</a></li>
+                  href="newsroom/index.html">News|便り</a></li>
               <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                  href="about/index.html">About/約</a></li>
+                  href="about/index.html">About|約</a></li>
             </ul>
           </div>
         </div> <!-- end .top_header_items_holder -->
