--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <div class="thin">
                   <h3><a href="project/index.html">Project</a></h3>
                   <ul class="content">
-                    <li><a href="wiki/index.html">Zelda Wiki</a>
+                    <li><a href="project/wiki/index.html">Zelda Wiki</a>
                       <ul class="section">
                         <li>Intro</li>
                         <li>Characters</li>
