--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@
                   <h3><a href="newsroom/index.html">Newsroom</a></h3>
                   <ul class="content">
                     <li><a href="newsroom/blog/index.html">Studio Blog</a></li>
+                    <ul class="section">
+                      <li>Updates</li>
+                      <li>Archive</li>
+                    </ul>
                     <li><a href="newsroom/millmintOS/index.html">millmintOS</a></li>
                     <li>The <i>Atlantic</i> Bulletin</li>
                   </ul>
