--- a/project/timeline/index.html
+++ b/project/timeline/index.html
@@ -9,8 +9,12 @@
     <link rel='stylesheet' id='fonts-css'  href='../../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
     <link rel="stylesheet" href="./style.css">
     <link rel='stylesheet' id='custom-css'  href='../../theme/assets/css/custom.css' type='text/css' media='all' />
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style id='custom-inline-css' type='text/css'>body { font-family: 'Roboto', sans-serif; }h1, h2, h3, h4, h5, h6, .title, .text_logo, .comment-reply-title, .header_square_logo a.square_letter_logo {font-family: 'Poppins', sans-serif;}a { color: #ff374a; }
     </style>
+
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery-migrate.min.js'></script>
 
@@ -34,7 +38,7 @@
 
           <div class="header_sliding_sidebar_control header_control_wrapper">
             <a id="user_control_icon" class="sliding_sidebar_button" href="#">
-              <i class="fas fa-bars header_control_icon"></i>
+              <i class="fa fa-bars"></i>
             </a>
           </div>
 
@@ -46,16 +50,16 @@
             <li id="menu-item-585"
               class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
               <a href="../../index.html">Home/家</a></li>
-            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                href="../../intro/index.html">Intro/序</a></li>
+            <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-702 default_menu active"><a
+                href="../../project/index.html">Project/参照</a></li>
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                href="../../wiki/index.html">Wiki/ウィキ</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a
-                href="../../timeline/index.html">Timeline/年表</a></li>
+                href="../../files/index.html">Files/資料</a></li>
+            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+                href="../../newsroom/index.html">News/便り</a></li>
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../../comic/index.html">Comic/漫画</a></li>
+                href="../../about/index.html">About/約画</a></li>
           </ul>
-          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 326.21875px;"></span>
+          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
         </div>
 
         <!-- Place header control after main menu if site title is enabled -->
@@ -97,19 +101,19 @@
               class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
               <a href="../../index.html">Home/家</a></li>
             <li id="menu-item-702"
-              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                href="../../intro/index.html">Intro/序</a></li>
+              class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-702 default_menu active"><a
+                href="../../project/index.html">Project/参照</a></li>
             <li id="menu-item-523"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                href="../../wiki/index.html">Wiki/ウィキ</a></li>
+                href="../../files/index.html">Files/資料</a></li>
             <li id="menu-item-524"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a
-                href="../../timeline/index.html">Timeline/年表</a></li>
+              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+                href="../../newsroom/index.html">News/便り</a></li>
             <li id="menu-item-525"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../../comic/index.html">Comic/漫画</a></li>
+                href="../../about/index.html">About/約画</a></li>
           </ul>
-          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 326.21875px;"></span>
+          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
         </div>
 
         <!-- Place header control after main menu if site title is enabled -->
@@ -762,19 +766,19 @@
               class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
               <a href="../../index.html">Home/家</a></li>
             <li id="menu-item-702"
-              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                href="../../intro/index.html">Intro/序</a></li>
+              class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-702 default_menu active"><a
+                href="../../project/index.html">Project/参照</a></li>
             <li id="menu-item-523"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                href="../../wiki/index.html">Wiki/ウィキ</a></li>
+                href="../../files/index.html">Files/資料</a></li>
             <li id="menu-item-524"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a
-                href="../../timeline/index.html">Timeline/年表</a></li>
+              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+                href="../../newsroom/index.html">News|便り</a></li>
             <li id="menu-item-525"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../../comic/index.html">Comic/漫画</a></li>
+                href="../../about/index.html">About/約画</a></li>
           </ul>
-          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 326.21875px;"></span>
+          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
         </div>
       </div> <!-- end .top_header_items_holder -->
 
